<resources>
    <string name="app_name">Zeraki App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="audio_toggle">Audio Toggle</string>
    <string name="room_screen_pin_icon_description">Pin</string>
    <string name="network_level">Network Level</string>
    <string name="you">You</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="share_screen">Share Screen</string>
    <string name="screen_capture_permission_not_granted">Screen capture permission not granted</string>
    <string name="stop_screen_share">Stop screen share</string>
    <string name="failed_to_add_screen_video_track">Failed to add screen video track</string>
    <string name="screen_capture_error">Screen Capture Error</string>
    <string name="settings_screen_enable_network_quality_level_description">Network Quality Values</string>
    <string name="permissions_required">"Camera and Microphone permissions needed. Please allow in App Settings for additional functionality."</string>
    <string name="pause_audio">Pause Audio</string>
    <string name="resume_audio">Resume Audio</string>
    <string name="pause_video">Pause Video</string>
    <string name="resume_video">Resume Video</string>
    <string name="camera_video_track">Camera</string>
    <string name="failed_to_add_camera_video_track">Failed to add camera video track</string>
    <string name="screen_video_track">Video</string>
    <string name="connect_to_room">Connect To Room</string>
    <string name="username">Username</string>
    <string name="room_name">Room Name</string>
    <string name="room_screen_connection_failure_title">Connection Failure</string>
    <string name="room_screen_connection_failure_message">Failed to connect !</string>

    <string-array name="settings_screen_environment_array">
        <item>Production</item>
        <item>Staging</item>
        <item>Development</item>
    </string-array>

    <string-array name="settings_screen_environment_array_values">
        <item>production</item>
        <item>stage</item>
        <item>dev</item>
    </string-array>

    <string-array name="settings_screen_topology_array">
        <item>group</item>
        <item>group-small</item>
        <item>peer-to-peer</item>
    </string-array>
    <string-array name="settings_screen_aspect_ratio_array">
        <item>4:3</item>
        <item>16:9</item>
        <item>11:9</item>
    </string-array>

    <string-array name="settings_screen_aspect_ratio_array_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="settings_screen_video_dimensions_array">
        <item>352x288</item>
        <item>640x480</item>
        <item>800x480</item>
        <item>960x540</item>
        <item>1280x720</item>
        <item>1280x960</item>
        <item>1440x1080</item>
        <item>1920x1080</item>
    </string-array>

    <string-array name="room_type">
        <item>Room Type</item>
        <item>Peer to Peer</item>
        <item>Group</item>
    </string-array>
</resources>