<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/participant_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- RemoteParticipant layout with video track -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/participant_video_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.twilio.video.VideoTextureView
            android:id="@+id/participant_video"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:overlaySurface="false"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/participant_badge"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="56dp"
            android:background="@drawable/badge_background"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/participant_video_identity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/participant_no_audio"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="4dp"
                android:contentDescription="@string/audio_toggle"
                app:layout_constraintEnd_toStartOf="@+id/network_quality_level_img"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/dominant_speaker_img"
                app:layout_constraintTop_toBottomOf="@id/participant_video_identity"
                app:srcCompat="@drawable/ic_thumbnail_no_audio" />

            <ImageView
                android:id="@+id/dominant_speaker_img"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="4dp"
                android:visibility="gone"
                app:layout_constraintEnd_toStartOf="@+id/participant_no_audio"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/participant_video_identity"
                app:srcCompat="@drawable/ic_baseline_record_voice_over_24" />

            <ImageView
                android:id="@+id/network_quality_level_img"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="4dp"
                android:contentDescription="@string/settings_screen_enable_network_quality_level_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                android:visibility="gone"
                app:layout_constraintStart_toEndOf="@+id/participant_no_audio"
                app:layout_constraintTop_toBottomOf="@id/participant_video_identity"
                app:srcCompat="@drawable/network_quality_level_0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- RemoteParticipant layout without video track -->

    <RelativeLayout
        android:id="@+id/participant_selected_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/participantSelectedBackground">

        <ImageView
            android:id="@+id/participant_stub_image"
            android:layout_width="107dp"
            android:layout_height="107dp"
            android:layout_centerInParent="true"
            android:contentDescription="@string/profile_picture"
            app:srcCompat="@drawable/ic_undraw_profile_pic_ic5t" />

        <TextView
            android:id="@+id/participant_selected_identity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/participant_stub_image"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="24dp"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold" />
    </RelativeLayout>

</FrameLayout>